@@ -600,6 +600,9 @@
    <id>printer/Kyocera-KM-6230</id>
   </printer>
   <printer>
+   <id>printer/Lexmark-E120</id>
+  </printer>
+  <printer>
    <id>printer/Lexmark-Optra_E</id><!-- Lexmark Optra E -->
   </printer>
   <printer>
