@@ -1,0 +1,39 @@
+<printer id="printer/Lexmark-E120">
+   <make>Lexmark</make>
+   <model>E120</model>
+   <mechanism>
+   <!--not "color"-->
+      <laser/>
+      <resolution>
+         <dpi>
+            <x>600</x>
+            <y>600</y>
+         </dpi>
+      <consumables>
+      </consumables>
+      </resolution>
+   </mechanism>
+   <url></url>
+   <lang>
+      <pcl level="6"/>
+      <!--no pjl-->
+      <!--no "text"-->
+   </lang>
+   <functionality>A</functionality>
+   <driver>pxlmono</driver>
+   <drivers>
+     <driver>
+       <id>pxlmono</id>
+     </driver>
+     <driver>
+       <id>lj4dith</id>
+     </driver>
+   </drivers>
+   <comments>
+      <en>
+      Foomatic entry made by PPDtoXML T/G 0.19 on 2008-09-03
+
+      You can use this printer using PCL5 language. Pressing the "Print" button on the printer (when the printer is idle) you will get a technical sheet regarding the printer's internal settings. 
+      </en>
+   </comments>
+</printer>
