@@ -1,8 +1,10 @@
 2008-09-03  Dafydd Crosby <dcrosby@userful.com>
 
 	* printer/Dell-3100cn.xml, PPD/Dell, driver/pxlmono.xml,
-	driver/Postscript.xml, printer/Lexmark-E120n.xml:
-	added the Dell 3100cn
+	driver/Postscript.xml, printer/Lexmark-E120n.xml, 
+	driver/lj4dith.xml, printer/Lexmark-E120.xml:
+	added the Dell 3100cn (Ubuntu #90718)
+	added the Lexmark E120
 	updated Lexmark E120n information
 
 2008-09-03  Tim Waugh  <twaugh@redhat.com>
